--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9888,6 +9888,41 @@ h3 {
   height: 35px;
 }
 
+.nav-link:hover {
+  color: #e56353 !important;
+}
+
+header {
+  background-image: url(../img/post-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 10rem;
+  height: 100%;
+}
+
+.header--text {
+  font-family: "Playfair Display", serif;
+  font-weight: bolder;
+  font-size: 70px;
+  font-style: italic;
+  padding-top: 8rem;
+}
+
+.pie {
+  background-color: #121619;
+  height: 200px;
+  width: 100%;
+}
+
+.pie--logo {
+  width: 120px;
+  height: 45px;
+}
+
+.pie--contenedor {
+  padding-top: 10rem;
+}
+
 .header--button--medium {
   width: 180px;
   height: 52px;
