--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -18,6 +18,7 @@
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
+@import 'layout/sections';
 // Components
 @import 'components/buttons';
 @import 'components/carousel';
