--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6243,7 +6243,7 @@ button.bg-dark:focus {
   display: inline-flex !important;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   .d-sm-none {
     display: none !important;
   }
@@ -9897,15 +9897,15 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 10rem;
-  height: 100%;
+  height: 60vmax;
 }
 
 .header--text {
   font-family: "Playfair Display", serif;
   font-weight: bolder;
-  font-size: 70px;
+  font-size: 8vmax;
   font-style: italic;
-  padding-top: 8rem;
+  padding-top: 1.5em;
 }
 
 .header--icono {
@@ -9931,11 +9931,11 @@ h5 {
 }
 
 p {
-  line-height: 2rem;
+  line-height: 2.1rem;
 }
 
 .page {
-  height: 330px;
+  height: 19rem;
   width: 100%;
   border-top: 1px solid #d1d1d1;
   padding: 5rem 4rem;
@@ -9950,7 +9950,7 @@ p {
 
 .naomi {
   font-weight: 700;
-  font-size: 18px;
+  font-size: 1.8rem;
   font-family: "Playfair Display", serif;
   font-style: italic;
 }
@@ -9971,7 +9971,8 @@ p {
 .pagination--container {
   text-align: center;
   background-color: #e6e7e7;
-  height: 115px;
+  height: 7rem;
+  padding: 1rem 1rem;
 }
 
 .pagination--container--item {
