--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -4,21 +4,23 @@ h5 {
    color: $color-lightgray;
    font-family: $roboto;
    font-weight: $regular;
+   
 }
 
 p {
-    line-height: 2rem;
+    line-height: 2.1rem;
 }
 
 //Secccion Page
 .page {
-height: 330px;
+height: 25rem;
 width: 100%;
 border-top: 1px solid $color-lightgray;
 padding: 5rem 4rem;
 margin-bottom: 2rem;
 
 }
+
 
 .page--img {
     height: 140px;
@@ -28,9 +30,11 @@ margin-bottom: 2rem;
 
 .naomi {
     font-weight: $bold;
-    font-size: $large;
+    font-size: 1.4rem;
     font-family: $playfair;
     font-style: italic;
+    padding: 0.2rem 0.2rem;
+    text-align: center;
 }
 
 .page--img--texto {
@@ -51,12 +55,15 @@ margin-bottom: 2rem;
 .pagination--container {
     text-align: center;
     background-color: $color-platinum;
-    height: 115px;
+    height:  7rem;
+    padding: 1rem 1rem;
+    position: relative;
 }
 
 .pagination--container--item{
     text-align: center;
     justify-content: center;
+    
 }
 
 .pagination {
